<resources>
    <string name="app_name">Jogja Tasty</string>
    <string name="text_title">Jogja \nTasty</string>
    <string name="text_title_home"><font color="#3D3D3D">Simple way to find \n</font><font color="#FF6838">tasty recipes</font></string>
    <string name="text_category">Popular Meal</string>
    <string name="text_title_category">Category</string>
    <string name="text_title_food">Teriyaki Chicken</string>
    <string name="text_title_area">Country</string>
    <string name="text_title_instruction">INSTRUCTIONS</string>
    <string name="text_title_ingredients">INGREDIENTS</string>
    <string name="text_title_tags">Desert, Summer, Fruity, Dairy</string>
    <string name="text_btn_detile">Detail</string>
    <string name="text_name">Sekar Ayu Savitri</string>
    <string name="text_email">savitrisekar10@gmail.com</string>
    <string name="text_dsc_category">Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times.[1] Beef is a source of high-quality protein and essential nutrients.[2]</string>
</resources>